@@ -7,7 +7,7 @@ ValgrindRemoteLaunchDelegate_task_name=Profiling Remote C/C++ Application
 ValgrindRemoteProcess_error_proc_not_term=Process has not terminated.
 ValgrindRemoteTab_error_dest_wd=Please specify destination/working directory.
 ValgrindRemoteTab_error_location_VG=Please specify the location of the Valgrind binary.
-ValgrindRemoteTab_error_peer=A TCF Peer must be selected.
+ValgrindRemoteTab_error_peer=An RSE host must be selected.
 ValgrindRemoteTab_error_tmp_dir=Please specify temporary files directory.
 ValgrindRemoteTab_header_ID=ID
 ValgrindRemoteTab_header_name=Name
