@@ -1,3 +1,11 @@
+2011-08-15  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/messages.properties: Change error
+	message concerning TCF.
+	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/ValgrindRemoteLaunchDelegate.java (launch): 
+	Change to new remote command API and check return code to see if an error
+	dialog is warranted.
+
 2011-08-08  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* META-INF/MANIFEST.MF: Remove TCF references.
